--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         <div id="mainDiv">
             <div id="gridContainer">
-                <p id="questionDisplay">Welcome to our code Quiz!</p>
+                <p id="questionDisplay">Code Quiz Challenge!</p>
                 <p id="finalScoreDisplay"></p>
                 <p id="enterInitials"></p>
                 <textarea id="enterInitialsTextArea"></textarea>
